--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ streamlit
 spacy
 pymupdf
 python-docx
+docx2txt
 pandas
 sqlalchemy
 scikit-learn
-spacy
+
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
